# orca-external-tools

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  g-xTB.py  gxtb.py  install.py  mace.sh  maceclient.sh  maceserver.sh  noxfile.py  oet  oet_server  otool  pyproject.toml  umaserver.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pr_nox.yml
aimnet2/src/aimnet2exttool/: standalone.py
examples/: README.md  goat_water_mace_omol_server.inp  goat_water_mace_omol_standalone.inp
mace/: README.md  install.sh  pyproject.toml
mace/examples/: README.md  goat_water_mace_omol_server.inp  goat_water_mace_omol_standalone.inp
mace/src/maceexttool/: __init__.py  calculator.py  client.py  common.py  server.py  standalone.py
mace/test/: .gitignore  H2O_goat_extclient.inp  HF.engrad  HF.xyz  HF_exttool.inp  HF_orca_ext.gbw  HF_orca_ext.inp  HF_orca_ext.opt  HF_orca_ext.property.txt  HF_orca_extclient.gbw  HF_orca_extclient.inp  HF_orca_extclient.property.txt  run_tests.sh  s.out
mace/tests/: conftest.py  test_mace_exttool.py  test_mace_integration.py
requirements/: aimnet2.txt  mlatom.txt  uma.txt
src/oet/: __init__.py
src/oet/calculator/: aenet.py  aimnet2.py  gxtb.py  mlatom.py  mopac.py  uma.py  xtb.py
src/oet/core/: base_calc.py  misc.py  test_utilities.py
src/oet/scripts/: oet  oet.py
src/oet/server_client/: client.py  server.py
tests/aimnet2/: test_aiment2_client.py  test_aiment2_standalone.py
tests/g-xtb/: test_gxtb.py
tests/mlatom/: test_mlatom.py
tests/mopac/: test_mopac.py
tests/uma/: test_uma_client.py  test_uma_standalone.py
tests/xtb/: test_xtb.py
uma/src/umaexttool/: client.py  common.py  standalone.py
uma/test/: h2_extopt.inp  h2_extopt.serverout  run_h2.sh  run_tests.sh
uma/test/output/: h2_extopt.out
